--- a/rhpam-config/7.13.1/jms/activemq-jms-config.yaml
+++ b/rhpam-config/7.13.1/jms/activemq-jms-config.yaml
@@ -9,6 +9,10 @@ servers:
       spec:
         template:
           spec:
+            securityContext:
+              allowPrivilegeEscalation: false
+              privileged: false
+              runAsNonRoot: true
             containers:
               - name: "[[.KieName]]"
                 env:
