--- a/rhpam-config/7.13.1/envs/rhpam-production-immutable.yaml
+++ b/rhpam-config/7.13.1/envs/rhpam-production-immutable.yaml
@@ -13,6 +13,10 @@ servers:
         spec:
           template:
             spec:
+              securityContext:
+                allowPrivilegeEscalation: false
+                privileged: false
+                runAsNonRoot: true
               containers:
                 - name: "[[.KieName]]"
                   env:
