--- a/deploy/olm-catalog/prod/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/ibm-bamoe/bamoe-rhel8-operator:8.0.0
-    createdAt: "2022-07-25 15:01:51"
+    createdAt: "2022-07-27 10:00:02"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -377,9 +377,9 @@ spec:
     operated-by: bamoe-businessautomation-operator.8.0.0-1
   links:
   - name: Product Page
-    url: https://access.redhat.com/products/red-hat-process-automation-manager
+    url: 'https://ibm.com '
   - name: Documentation
-    url: https://access.redhat.com/documentation/en-us/red_hat_process_automation_manager/8.0/#category-deploying-red-hat-process-automation-manager-on-openshift
+    url: https://www.ibm.com/docs/en/ibamoe
   maturity: 8.x-stable
   provider:
     name: IBM
