--- a/deploy/olm-catalog/prod/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,12 +7,12 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/ibm-bamoe/bamoe-rhel8-operator:8.0.0
-    createdAt: "2022-07-27 10:00:02"
+    createdAt: "2022-07-27 11:46:20"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
-    support: IBM
+    support: https://www.ibm.com/mysupport
     tectonic-visibility: ocs
   labels:
     operator-bamoe-businessautomation: "true"
@@ -380,6 +380,9 @@ spec:
     url: 'https://ibm.com '
   - name: Documentation
     url: https://www.ibm.com/docs/en/ibamoe
+  maintainers:
+  - email: mysphelp@us.ibm.com
+    name: IBM
   maturity: 8.x-stable
   provider:
     name: IBM
