--- a/deploy/olm-catalog/test/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,18 +7,18 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/bamoe-8-rhpam-rhel8-operator:8.0.0
-    createdAt: "2022-07-27 10:00:02"
+    createdAt: "2022-07-27 11:46:20"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
-    support: IBM
+    support: https://www.ibm.com/mysupport
     tectonic-visibility: ocs
   labels:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.0-1-dev-4tvjhl29pz
+  name: bamoe-businessautomation-operator.8.0.0-1-dev-svx7qq6rf7
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -374,17 +374,20 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-4tvjhl29pz
+    operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-svx7qq6rf7
   links:
   - name: Product Page
     url: 'https://ibm.com '
   - name: Documentation
     url: https://www.ibm.com/docs/en/ibamoe
+  maintainers:
+  - email: mysphelp@us.ibm.com
+    name: IBM
   maturity: test
   provider:
     name: IBM
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-4tvjhl29pz
-  version: 8.0.0-1+4tvjhl29pz
+      operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-svx7qq6rf7
+  version: 8.0.0-1+svx7qq6rf7
