--- a/deploy/olm-catalog/dev/7.13.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.13.0-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.13.0
-    createdAt: "2022-05-27 15:18:02"
+    createdAt: "2022-07-27 13:28:05"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -20,7 +20,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.0-1-dev-lkbnqwfddr
+  name: businessautomation-operator.7.13.0-1-dev-5kkn6bq4j7
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -114,8 +114,6 @@ spec:
     Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
 
     * **Red Hat Process Automation Manager** is a platform for developing containerized microservices and applications that automate business decisions and processes. It includes business process management (BPM), business rules management (BRM), and business resource optimization and complex event processing (CEP) technologies. It also includes a user experience platform to create engaging user interfaces for process and decision services with minimal coding.
-
-     * **Red Hat Decision Manager** is a platform for developing containerized microservices and applications that automate business decisions. It includes business rules management, complex event processing, and resource optimization technologies. Organizations can incorporate sophisticated decision logic into line-of-business applications and quickly update underlying business rules as market conditions change.
 
     [See more](https://www.redhat.com/en/products/process-automation).
   displayName: Business Automation (DEV)
@@ -408,7 +406,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.0-1-dev-lkbnqwfddr
+    operated-by: businessautomation-operator.7.13.0-1-dev-5kkn6bq4j7
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -424,5 +422,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.0-1-dev-lkbnqwfddr
-  version: 7.13.0-1+lkbnqwfddr
+      operated-by: businessautomation-operator.7.13.0-1-dev-5kkn6bq4j7
+  version: 7.13.0-1+5kkn6bq4j7
