--- a/deploy/olm-catalog/dev/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:8.0.0
-    createdAt: "2022-07-27 13:19:07"
+    createdAt: "2022-07-27 15:37:39"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -18,7 +18,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.0-1-dev-lqvqq7srvh
+  name: bamoe-businessautomation-operator.8.0.0-1-dev-xx9rcj4xnp
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -372,10 +372,10 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-lqvqq7srvh
+    operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-xx9rcj4xnp
   links:
   - name: Product Page
-    url: 'https://ibm.com '
+    url: https://ibm.com
   - name: Documentation
     url: https://www.ibm.com/docs/en/ibamoe
   maintainers:
@@ -387,5 +387,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-lqvqq7srvh
-  version: 8.0.0-1+lqvqq7srvh
+      operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-xx9rcj4xnp
+  version: 8.0.0-1+xx9rcj4xnp
