--- a/deploy/olm-catalog/prod/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/ibm-bamoe/bamoe-rhel8-operator:8.0.0
-    createdAt: "2022-07-27 13:19:07"
+    createdAt: "2022-07-27 15:37:39"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -375,7 +375,7 @@ spec:
     operated-by: bamoe-businessautomation-operator.8.0.0-1
   links:
   - name: Product Page
-    url: 'https://ibm.com '
+    url: https://ibm.com
   - name: Documentation
     url: https://www.ibm.com/docs/en/ibamoe
   maintainers:
