--- a/deploy/olm-catalog/test/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/8.0.0-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/bamoe-8-rhpam-rhel8-operator:8.0.0
-    createdAt: "2022-07-27 13:19:07"
+    createdAt: "2022-07-27 15:37:39"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -18,7 +18,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.0-1-dev-8rvs56vr62
+  name: bamoe-businessautomation-operator.8.0.0-1-dev-ljr7njjkqc
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -372,10 +372,10 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-8rvs56vr62
+    operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-ljr7njjkqc
   links:
   - name: Product Page
-    url: 'https://ibm.com '
+    url: https://ibm.com
   - name: Documentation
     url: https://www.ibm.com/docs/en/ibamoe
   maintainers:
@@ -387,5 +387,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-8rvs56vr62
-  version: 8.0.0-1+8rvs56vr62
+      operated-by: bamoe-businessautomation-operator.8.0.0-1-dev-ljr7njjkqc
+  version: 8.0.0-1+ljr7njjkqc
