move main branch to next release
Signed-off-by: spolti <fspolti@redhat.com>

--- a/deploy/cluster_role_binding.yaml
+++ b/deploy/cluster_role_binding.yaml
@@ -7,6 +7,7 @@ roleRef:
   kind: ClusterRole
   name: business-automation-operator
 subjects:
-- kind: ServiceAccount
+- apiGroup: rbac.authorization.k8s.io
+  kind: ServiceAccount
   name: business-automation-operator
   namespace: placeholder
