--- a/deploy/role_binding.yaml
+++ b/deploy/role_binding.yaml
@@ -7,5 +7,6 @@ roleRef:
   kind: Role
   name: business-automation-operator
 subjects:
-- kind: ServiceAccount
+- apiGroup: rbac.authorization.k8s.io
+  kind: ServiceAccount
   name: business-automation-operator
