--- a/deploy/olm-catalog/dev/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:8.0.1
-    createdAt: "2022-10-04 17:06:59"
+    createdAt: "2022-10-06 11:21:23"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -18,7 +18,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.1-1-dev-wzgt6p4cvn
+  name: bamoe-businessautomation-operator.8.0.1-1-dev-r7zcrc7cpb
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -232,6 +232,13 @@ spec:
                 imagePullPolicy: Always
                 name: bamoe-business-automation-operator
                 resources: {}
+                securityContext:
+                  allowPrivilegeEscalation: false
+                  capabilities:
+                    drop:
+                    - ALL
+                  privileged: false
+                  runAsNonRoot: true
               serviceAccountName: bamoe-business-automation-operator
       permissions:
       - rules:
@@ -396,7 +403,7 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-wzgt6p4cvn
+    operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-r7zcrc7cpb
   links:
   - name: Product Page
     url: https://ibm.com
@@ -412,5 +419,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-wzgt6p4cvn
-  version: 8.0.1-1+wzgt6p4cvn
+      operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-r7zcrc7cpb
+  version: 8.0.1-1+r7zcrc7cpb
