--- a/deploy/olm-catalog/prod/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.stage.redhat.io/ibm-bamoe/bamoe-rhel8-operator:8.0.1
-    createdAt: "2022-10-04 17:06:59"
+    createdAt: "2022-10-06 11:21:23"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -232,6 +232,13 @@ spec:
                 imagePullPolicy: Always
                 name: bamoe-business-automation-operator
                 resources: {}
+                securityContext:
+                  allowPrivilegeEscalation: false
+                  capabilities:
+                    drop:
+                    - ALL
+                  privileged: false
+                  runAsNonRoot: true
               serviceAccountName: bamoe-business-automation-operator
       permissions:
       - rules:
