--- a/deploy/olm-catalog/dev/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/8.0.1-1/manifests/bamoe-businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:8.0.1
-    createdAt: "2022-08-22 12:16:48"
+    createdAt: "2022-10-04 17:06:59"
     description: Deploys and manages IBM Business Automation Manager Open Editions
       environment.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -18,7 +18,7 @@ metadata:
     operator-bamoe-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: bamoe-businessautomation-operator.8.0.1-1-dev-c9dd72bwf2
+  name: bamoe-businessautomation-operator.8.0.1-1-dev-wzgt6p4cvn
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -187,7 +187,7 @@ spec:
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_8.0.1
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_8.0.1
-                  value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
+                  value: registry.redhat.io/rhscl/postgresql-12-rhel7:latest
                 - name: RELATED_IMAGE_DATAGRID_IMAGE_8.0.1
                   value: registry.redhat.io/datagrid/datagrid-8-rhel8:1.1
                 - name: RELATED_IMAGE_BROKER_IMAGE_8.0.1
@@ -396,10 +396,10 @@ spec:
   - operator
   labels:
     alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-    operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-c9dd72bwf2
+    operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-wzgt6p4cvn
   links:
   - name: Product Page
-    url: 'https://ibm.com '
+    url: https://ibm.com
   - name: Documentation
     url: https://www.ibm.com/docs/en/ibamoe
   maintainers:
@@ -412,5 +412,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-bamoe-businessautomation: bamoe-businessautomation-operator
-      operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-c9dd72bwf2
-  version: 8.0.1-1+c9dd72bwf2
+      operated-by: bamoe-businessautomation-operator.8.0.1-1-dev-wzgt6p4cvn
+  version: 8.0.1-1+wzgt6p4cvn
