--- a/deploy/olm-catalog/dev/7.13.2-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.13.2-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.13.2
-    createdAt: "2022-10-20 14:35:16"
+    createdAt: "2022-11-08 16:28:18"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -20,7 +20,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.2-1-dev-72k95jnflp
+  name: businessautomation-operator.7.13.2-1-dev-kxdmjb495l
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -409,7 +409,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.2-1-dev-72k95jnflp
+    operated-by: businessautomation-operator.7.13.2-1-dev-kxdmjb495l
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -425,5 +425,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.2-1-dev-72k95jnflp
-  version: 7.13.2-1+72k95jnflp
+      operated-by: businessautomation-operator.7.13.2-1-dev-kxdmjb495l
+  version: 7.13.2-1+kxdmjb495l
